--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "lucide-react": "^0.475.0",
     "npm": "^11.1.0",
     "pptxgenjs": "^3.12.0",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-heatmap-grid": "^0.9.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
     "react-shimmer-effects": "^1.0.3",
+    "react-spinners": "^0.15.0",
     "recharts": "^2.15.1"
   },
   "devDependencies": {
