--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/material": "^6.4.5",
     "@nivo/heatmap": "^0.88.0",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@react-three/drei": "^9.56.0",
+    "@react-three/fiber": "^8.13.5",
     "apexcharts": "^4.5.0",
     "axios": "^1.7.9",
     "install": "^0.13.0",
@@ -30,7 +32,10 @@
     "react-router-dom": "^7.1.5",
     "react-shimmer-effects": "^1.0.3",
     "react-spinners": "^0.15.0",
-    "recharts": "^2.15.1"
+    "react-toastify": "^11.0.5",
+    "recharts": "^2.15.1",
+    "three": "^0.150.1",
+    "three-stdlib": "^2.35.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
