--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@react-three/fiber": "^8.13.5",
     "apexcharts": "^4.5.0",
     "axios": "^1.7.9",
+    "buffer": "^6.0.3",
+    "gray-matter": "^4.0.3",
     "install": "^0.13.0",
     "jspdf": "^3.0.0",
     "lucide-react": "^0.475.0",
@@ -29,11 +31,13 @@
     "react-dom": "^18.3.1",
     "react-heatmap-grid": "^0.9.1",
     "react-icons": "^5.4.0",
+    "react-markdown": "^10.0.0",
     "react-router-dom": "^7.1.5",
     "react-shimmer-effects": "^1.0.3",
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
+    "remark-gfm": "^4.0.1",
     "three": "^0.150.1",
     "three-stdlib": "^2.35.14"
   },
