--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-icons": "^5.4.0",
     "react-markdown": "^10.0.0",
     "react-router-dom": "^7.1.5",
+    "react-share": "^5.2.2",
     "react-shimmer-effects": "^1.0.3",
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.5",
