--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-apexcharts": "^1.7.0",
     "react-dom": "^18.3.1",
     "react-heatmap-grid": "^0.9.1",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.4.0",
     "react-markdown": "^10.0.0",
     "react-router-dom": "^7.1.5",
