Add Study added

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-heatmap-grid": "^0.9.1",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.4.0",
