--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "axios": "^1.7.9",
     "buffer": "^6.0.3",
     "gray-matter": "^4.0.3",
+    "html2canvas": "^1.4.1",
     "install": "^0.13.0",
     "jspdf": "^3.0.0",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.475.0",
     "npm": "^11.1.0",
     "pptxgenjs": "^3.12.0",
