--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-icons": "^5.4.0",
     "react-markdown": "^10.0.0",
     "react-router-dom": "^7.1.5",
+    "react-select": "^5.10.1",
     "react-share": "^5.2.2",
     "react-shimmer-effects": "^1.0.3",
     "react-spinners": "^0.15.0",
@@ -57,6 +58,6 @@
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
     "prettier": "^3.5.1",
-    "vite": "^6.1.0"
+    "vite": "^6.2.5"
   }
 }
