--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@react-three/drei": "^9.56.0",
     "@react-three/fiber": "^8.13.5",
+    "@tailwindcss/vite": "^4.1.7",
     "apexcharts": "^4.5.0",
     "axios": "^1.7.9",
     "buffer": "^6.0.3",
     "gray-matter": "^4.0.3",
+    "html2canvas": "^1.4.1",
     "install": "^0.13.0",
     "jspdf": "^3.0.0",
     "lottie-react": "^2.4.1",
@@ -42,6 +44,7 @@
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
     "remark-gfm": "^4.0.1",
+    "tailwindcss": "^4.1.7",
     "three": "^0.150.1",
     "three-stdlib": "^2.35.14"
   },
